--- a/projects/interactiveprototype2/interactiveprototype2.html
+++ b/projects/interactiveprototype2/interactiveprototype2.html
@@ -6,7 +6,7 @@
 	<title>great title here</title>
 	<meta name="viewport" content="width=device-width , initial-scale= 1.0">
 	<link href="https://cdn.jsdelivr.net/npm/normalize.css@7.0.0/normalize.min.css" rel="stylesheet">
-	<link href="https://fonts.googleapis.com/css?family=Roboto:700|Lobster" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Roboto:400:700" rel="stylesheet">
 	<script defer src="https://use.fontawesome.com/releases/v5.0.7/js/all.js"></script>
 	<link rel="stylesheet" href="http://anijs.github.io/lib/anicollection/anicollection.css">
 	<script type="text/javascript" src="onepagescroll.js"></script>
@@ -18,14 +18,14 @@
 
 <body>
 	<img class="logo" src="images/logo.png" alt="logo" width="50">
-	<div class="bouncearrow">
-	  <a class="fa fa-arrow-down fa-2x" href="#"></a>
-	</div>
+	<div class="arrow bounce">
+  <a class="fa fa-arrow-down fa-2x" href="#"></a>
+</div>
 
 	<div class="wrapper">
 		<div class="main">
 			<section class="page" id="page1">
-				<h1>According to AIGA, <span>60%</span> of Design is <span>White</span>.</h1>
+				<h1>According to AIGA, 60% of Design is <span>White</span>.</h1>
 
 				<!-- Pie Chart -->
 				<div id="chartContainer" style="height: 300px; max-width: 600px; margin: 0px auto;"></div>
@@ -41,15 +41,15 @@
 			<section class="page" id="page2">
 				<h1>Yet people from all walks of life are <span>designing</span> and <span>changing</span>
        the world today.</h1>
-<section id="revealAnim">
-	<img class="side" src="images/2.gif" alt="2" align="center">
-			</section>
-
+			 	<img src="images/1.png" alt="1" align="center">
 		</section>
 
 			<section class="page" id="page3">
-				<h1>There needs to be a <span>revisualization</span> to show there are more Designers of <span>Color</span> out here.</h1>
+				<h1>There needs to be a <span>revisualization</span> to show there are more <span>Designers of Color</span> out here.</h1>
+				<section id="revealAnim">
+					<img class="side" src="images/2.gif" alt="2" align="center">
 			</section>
+		</section>
 
 			<section class="page" id="page4">
 				<h1>What can <span>you</span> do to help be a voice of <span>representation?</span> </h1>
