Made changes to scroll bar colors

--- a/projects/interactiveprototype2/interactiveprototype2.html
+++ b/projects/interactiveprototype2/interactiveprototype2.html
@@ -71,19 +71,16 @@
 			</section>
 
 			<section class="page" id="page7">
-				<article></article>
-				<h3 style="float: left">You and your dot are special.<br>
-					 We'll use it to showcase your <span>work</span> and your <span>story</span>.</h3><br>
+				<h3 style="float: left">You and your dot are special.<br><br>
+					 We'll use it to showcase your <span>work</span> and your <span>story</span>.</h3>
 					 								<img style=""src="images/6.png" alt="6" width="500">
-				<article style="float: left; margin-left: 100px;">
+				<article style="float: left; margin-left: 50px;">
 					<a href="interactiveprototype2.html" style="margin-top: 50px; margin-right: 25px;  text-decoration: none; border: 1px #fff solid;">Reset</a>
 					<a href="https://vivmokona.github.io/des157/proto1/index.html" style="margin-top: 50px; margin-right: 200px; text-decoration: none; border: 1px #fff solid;">Let's do it!</a>
 				</article>
-
 			</section>
 
 		</div>
-
 	</div>
 	<footer>
 		<a href="">About</a>
@@ -100,5 +97,4 @@
 		});
 	</script>
 </body>
-
 </html>
