--- a/projects/interactiveprototype2/index.html
+++ b/projects/interactiveprototype2/index.html
@@ -14,12 +14,14 @@
 
 <body>
   <section>
-    <img class="profile">
+    <div class="profile">
+    <img src="photos/isaac.jpg">
     <h1>Isaac Tseng</h1>
     <h2>Transportation Design</h2>
     <h2>Pasadena, CA</h2>
     <h2><a href="@izzzzzaac">icon</a></h2>
-  </section>
+  </div>
+
   <article>
     <h3>What intrigued you to Design & why did you choose the field you are in now?</h3>
     <p>Design inspires me in terms of its ability impact human lives. As designers we create things for our audiences' consumption from which they hopefully gain something to enrich their lives. My love for cars attracted me to the field initially. Looking
@@ -37,6 +39,8 @@
     <p>Design works in systems, and societal systems are where underrepresentation can be found. In society there are systematic hierarchies that influence who gets more opportunity/representation and who gets less. Design can work to accommodate the underrepresented
       through targeting systems. It could be through the apps we use, message campaigns, daily necessities, and more. Through systems we can influence people's habits and knowledge, working to create a more level platform for all people.</p>
   </article>
+</section>
+
 
 
   <footer>
