--- a/projects/final/isaac.html
+++ b/projects/final/isaac.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>check out this person</title>
+  <title>Isaac Tseng</title>
   <meta name="viewport" content="width=device-width , initial-scale= 1.0">
   <link href="https://cdn.jsdelivr.net/npm/normalize.css@7.0.0/normalize.min.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Roboto:400:700|Roboto+Condensed|Lobster" rel="stylesheet">
@@ -19,7 +19,7 @@
     <h1>Isaac Tseng</h1>
     <h2>Transportation Design</h2>
     <h2>Pasadena, CA</h2>
-    <h2><a href="www.twitter.com/izzzzzaac"> <i class="fab fa-twitter"></i></a></h2>
+    <h2><a href="www.instagram.com/izzzzzaac"> <i class="fab fa-instagram"></i></a></h2>
   </div>
 
   <article>
