--- a/projects/final/index.html
+++ b/projects/final/index.html
@@ -2,55 +2,99 @@
 <html>
 
 <head>
-  <meta charset="utf-8">
-  <title>check out this person</title>
-  <meta name="viewport" content="width=device-width , initial-scale= 1.0">
-  <link href="https://cdn.jsdelivr.net/npm/normalize.css@7.0.0/normalize.min.css" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Roboto:400:700|Roboto+Condensed|Lobster" rel="stylesheet">
-  <script defer src="https://use.fontawesome.com/releases/v5.0.7/js/all.js"></script>
-  <link href='pagestyles.css' rel='stylesheet'>
+	<meta charset="utf-8">
+	<title>great title here</title>
+	<meta name="viewport" content="width=device-width , initial-scale= 1.0">
+	<link href="https://cdn.jsdelivr.net/npm/normalize.css@7.0.0/normalize.min.css" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Roboto:400:700" rel="stylesheet">
+	<script defer src="https://use.fontawesome.com/releases/v5.0.7/js/all.js"></script>
+	<link rel="stylesheet" href="http://anijs.github.io/lib/anicollection/anicollection.css">
+	<script type="text/javascript" src="onepagescroll.js"></script>
+	<link href='onepage-scroll.css' rel='stylesheet' type='text/css'>
+	<script src="canvasjs.min.js"></script>
+	<link href='styles.css' rel='stylesheet'>
 
 </head>
 
 <body>
-  <section>
-    <div class="profile">
-    <img src="photos/isaac.jpg">
-    <h1>Isaac Tseng</h1>
-    <h2>Transportation Design</h2>
-    <h2>Pasadena, CA</h2>
-    <h2><a href="@izzzzzaac">icon</a></h2>
-  </div>
+	<img class="logo" src="images/logo.png" alt="logo" width="50">
+	<div class="arrow bounce">
+  <a class="fa fa-arrow-down fa-2x" href="#"></a>
+</div>
 
-  <article>
-    <h3>What intrigued you to Design & why did you choose the field you are in now?</h3>
-    <p>Design inspires me in terms of its ability impact human lives. As designers we create things for our audiences' consumption from which they hopefully gain something to enrich their lives. My love for cars attracted me to the field initially. Looking
-      further into the field I realized how impactful transportation is to daily life, how it promotes mobility, which in turn can enhance productivity. It also heavily influences lifestyle and culture.</p>
+	<div class="wrapper">
+		<div class="main">
+			<section class="page" id="page1">
+				<h1>According to AIGA, 60% of Design is <span>White</span>.</h1>
 
-    <h3>What have been your biggest struggles of your career?</h3>
-    <p>Learning to take criticism with a good, positive, and learning mindset. Critique can hurt, especially if someone says "I hate it" point blank to your face. No matter through school rejections, job fumbles, or class critique, maintaining an open mind
-      to learn something from whatever people have had to say about my work has been very beneficial towards my growth and tenacity as a designer.</p>
+				<!-- Pie Chart -->
+				<div id="chartContainer" style="height: 300px; max-width: 600px; margin: 0px auto;"></div>
+				<script src="script.js">
+				</script>
+				<!-- Pie Chart End-->
+<article>
+				<a href="https://designcensus.org/" style="margin-top: 25px;   text-decoration: none;  border: 1px #fff solid;">How?</a>
+				<a href="https://vivmokona.github.io/des157/proto2/index.html" style="margin-top: 25px;   text-decoration: none;  border: 1px #fff solid;">Let's Fix That</a>
+</article>
+			</section>
 
-    <h3>What have your experiences been like as a person of color in the design industry? Does those experiences shape how you solve design-related problems?</h3>
-    <p>Specifically in my field of design, I have yet to experience significant difference in treatment due to my skin color. I have surprised the occasional white American with my English given my international schooling background. In terms of opportunity
-      I haven't been denied any based on my race so far.</p>
+			<section class="page" id="page2">
+				<h1>Yet people from all walks of life are <span>designing</span> and <span>changing</span>
+       the world today.</h1>
+			 	<img src="images/1.png" alt="1" align="center" width="300">
+		</section>
 
-    <h3>How can design be more accommodating to underrepresented populations of people?</h3>
-    <p>Design works in systems, and societal systems are where underrepresentation can be found. In society there are systematic hierarchies that influence who gets more opportunity/representation and who gets less. Design can work to accommodate the underrepresented
-      through targeting systems. It could be through the apps we use, message campaigns, daily necessities, and more. Through systems we can influence people's habits and knowledge, working to create a more level platform for all people.</p>
-  </article>
-</section>
+			<section class="page" id="page3">
+				<h1>There needs to be a <span>revisualization</span> to show there are more <span>Designers of Color</span> out here.</h1>
+				<section id="revealAnim">
+					<img class="side" src="images/2.gif" alt="2" align="center" width="280">
+			</section>
+		</section>
 
+			<section class="page" id="page4">
+				<h1>What can <span>you</span> do to help be a voice of <span>representation?</span> </h1>
+									<img src="images/3.png" alt="3" align="center" width="300">
+			</section>
 
+			<section class="page" id="page5">
+				<h1>We need <span>you</span> to help share your story!</h1>
+					<img src="images/4.png" alt="4" align="center">
+				</section>
 
-  <footer>
-    <a href="">About</a>
-    <a href="">Contact</a>
-    <a href="">Privacy Policy</a>
-    <a href="https://validator.w3.org/check?uri=referer">Valid HTML 5</a>
-    <a href="https://jigsaw.w3.org/css-validator/check/referer">Valid CSS</a>
-  </footer>
+			<section class="page" id="page6">
 
+				<h3 style="float: left;">Make a statement by placing yourself on the map based on your location.<br><br>
+       You will be a small dot, but <span>together</span> we can
+       collectively bring awareness.</h3>
+				<img src="images/5.png" alt="5" width="500">
+
+			</section>
+
+			<section class="page" id="page7">
+				<h3 style="float: left">You and your dot are special.<br><br>
+					 We'll use it to showcase your <span>work</span> and your <span>story</span>.</h3>
+					 								<img style=""src="images/6.png" alt="6" width="500">
+				<article style="float: left; margin-left: 50px;">
+					<a href="interactiveprototype2.html" style="margin-top: 50px; margin-right: 25px;  text-decoration: none; border: 1px #fff solid;">Reset</a>
+					<a href="https://vivmokona.github.io/des157/proto2/index.html" style="margin-top: 50px; margin-right: 200px; text-decoration: none; border: 1px #fff solid;">Let's do it!</a>
+				</article>
+			</section>
+
+		</div>
+	</div>
+	<footer>
+		<a href="">About</a>
+		<a href="">Contact</a>
+		<a href="">Privacy Policy</a>
+		<a href="https://validator.w3.org/check?uri=referer">Valid HTML 5</a>
+		<a href="https://jigsaw.w3.org/css-validator/check/referer">Valid CSS</a>
+	</footer>
+	<script>
+		onePageScroll(".main", {
+			sectionContainer: "section",
+			loop: true,
+			responsiveFallback: false
+		});
+	</script>
 </body>
-
 </html>
