--- a/projects/final/test.html
+++ b/projects/final/test.html
@@ -3,12 +3,13 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Isaac Tseng</title>
+  <title>Aaron Ngai</title>
   <meta name="viewport" content="width=device-width , initial-scale= 1.0">
   <link href="https://cdn.jsdelivr.net/npm/normalize.css@7.0.0/normalize.min.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Roboto:400:700|Roboto+Condensed|Lobster" rel="stylesheet">
   <script defer src="https://use.fontawesome.com/releases/v5.0.7/js/all.js"></script>
   <link href='pagestyles.css' rel='stylesheet'>
+
   <style>
       .navbar {
           overflow: hidden;
@@ -75,10 +76,10 @@
       }
 
   </style>
+
 </head>
 
 <body>
-
   <div class="navbar">
       <div class="dropdown">
           <button class="dropbtn" onclick="myFunction()">More Info
@@ -86,7 +87,7 @@
   </button>
           <div class="dropdown-content" id="myDropdown">
               <a href="https://vivmokona.github.io/des157/proto2/index.html">Home</a>
-              <a href="https://fxtzhou.github.io/des157/projects/final/index.html">About</a>
+              <a href="https://fxtzhou.github.io/des157/projects/interactiveprototype2/interactiveprototype2.html">About</a>
               <a class="active" href="#">Profile</a>
               <a href="#contact">Contact</a>
           </div>
@@ -95,49 +96,29 @@
 
   <section>
     <div class="profile">
-    <img src="photos/isaac.jpg" width="200px">
-    <h1>Isaac Tseng</h1>
-    <h2>Transportation Design</h2>
-    <h2>Pasadena, CA</h2>
-    <h2><a href="www.instagram.com/izzzzzaac"> <i class="fab fa-instagram"></i></a></h2>
+    <img src="photos/aaron.jpg" width="200px">
+    <h1>Aaron Ngai</h1>
+    <h2>Graphic & UI/UX Design</h2>
+    <h2>95901</h2>
+    <h2><a href="www.instagram.com/aironnai"> <i class="fab fa-instagram"></i></a></h2>
   </div>
 
   <article>
     <h3>What intrigued you to Design & why did you choose the field you are in now?</h3>
-    <p>Design inspires me in terms of its ability impact human lives. As designers we create things for our audiences' consumption from which they hopefully gain something to enrich their lives. My love for cars attracted me to the field initially. Looking
-      further into the field I realized how impactful transportation is to daily life, how it promotes mobility, which in turn can enhance productivity. It also heavily influences lifestyle and culture.</p>
+    <p>I was never really interested in Design till my senior year of High School where we had a simple Graphic Design class. I took it for units and grew to love it because of the endless creativity and freedom I felt from just doing homework. As I went through college UX/UI struck me as something I was more into as I went through classes and done my own research.</p>
 
     <h3>What have been your biggest struggles of your career?</h3>
-    <p>Learning to take criticism with a good, positive, and learning mindset. Critique can hurt, especially if someone says "I hate it" point blank to your face. No matter through school rejections, job fumbles, or class critique, maintaining an open mind
-      to learn something from whatever people have had to say about my work has been very beneficial towards my growth and tenacity as a designer.</p>
+    <p>The biggest struggle for me is having to chose between family and my career. Having a big ties to my family for who I am puts a lot of strain and stress on the work I do. When I was in a group project for one of my classes I had a situation where I had to be with my family and needed my group to continue working without me for the time being. Sadly that didn't work out that way and I had moments where I needed to decide if I could do all this work or be with my family. I did both which was a huge strain on my health.</p>
 
     <h3>What have your experiences been like as a person of color in the design industry? Does those experiences shape how you solve design-related problems?</h3>
-    <p>Specifically in my field of design, I have yet to experience significant difference in treatment due to my skin color. I have surprised the occasional white American with my English given my international schooling background. In terms of opportunity
-      I haven't been denied any based on my race so far.</p>
+    <p>I guess that word would be interesting. I've been through a few moments where clients would question my ability in design. As an Asian, a lot of people (in my area) see me as someone doing something greater than design or running with tradition and it gets pretty annoying and tiresome but that's just a few people in one town verse a whole country. So I don't think too much about it.</p>
 
     <h3>How can design be more accommodating to underrepresented populations of people?</h3>
-    <p>Design works in systems, and societal systems are where underrepresentation can be found. In society there are systematic hierarchies that influence who gets more opportunity/representation and who gets less. Design can work to accommodate the underrepresented
-      through targeting systems. It could be through the apps we use, message campaigns, daily necessities, and more. Through systems we can influence people's habits and knowledge, working to create a more level platform for all people.</p>
+    <p>I feel like design can open a lot of possiblites to problems that haven't been solved yet. Design can be used to tell a story and to be people together or awareness depending on how itâ€™s used. These sort of ideas can help benefit the populations that are well represented depending on those situations.</p>
   </article>
 </section>
 
-<script>
-    /* When the user clicks on the button, toggle between hiding and showing the dropdown content */
-    function myFunction() {
-        document.getElementById("myDropdown").classList.toggle("show");
-    }
 
-    // Close the dropdown if the user clicks outside of it
-    window.onclick = function(e) {
-        if (!e.target.matches('.dropbtn')) {
-            var myDropdown = document.getElementById("myDropdown");
-            if (myDropdown.classList.contains('show')) {
-                myDropdown.classList.remove('show');
-            }
-        }
-    }
-
-</script>
 
   <footer>
     <a href="">About</a>
@@ -147,6 +128,29 @@
     <a href="https://jigsaw.w3.org/css-validator/check/referer">Valid CSS</a>
   </footer>
 
+
+
+  <script>
+      /* When the user clicks on the button, toggle between hiding and showing the dropdown content */
+      function myFunction() {
+          document.getElementById("myDropdown").classList.toggle("show");
+      }
+
+      // Close the dropdown if the user clicks outside of it
+      window.onclick = function(e) {
+          if (!e.target.matches('.dropbtn')) {
+              var myDropdown = document.getElementById("myDropdown");
+              if (myDropdown.classList.contains('show')) {
+                  myDropdown.classList.remove('show');
+              }
+          }
+      }
+
+  </script>
+
 </body>
+
+</html>
+
 
 </html>
