--- a/projects/final/tiffany.html
+++ b/projects/final/tiffany.html
@@ -9,10 +9,88 @@
   <link href="https://fonts.googleapis.com/css?family=Roboto:400:700|Roboto+Condensed|Lobster" rel="stylesheet">
   <script defer src="https://use.fontawesome.com/releases/v5.0.7/js/all.js"></script>
   <link href='pagestyles.css' rel='stylesheet'>
+  <style>
+      .navbar {
+          overflow: hidden;
+          background-color: #333;
+          font-family: 'Roboto', Helvetica, sans-serif;
+      }
 
+      .navbar a {
+          float: left;
+          font-size: 16px;
+          color: white;
+          text-align: center;
+          padding: 7px 16px;
+          text-decoration: none;
+      }
+
+      .dropdown {
+          float: right;
+          overflow: hidden;
+      }
+
+      .dropdown .dropbtn {
+          cursor: pointer;
+          font-size: 16px;
+          border: none;
+          outline: none;
+          color: white;
+          padding: 10px 12px;
+          background-color: inherit;
+          font-family: inherit;
+          margin: 0;
+      }
+
+      .navbar a:hover,
+      .dropdown:hover .dropbtn,
+      .dropbtn:focus {
+          background-color: skyblue;
+      }
+
+      .dropdown-content {
+          display: none;
+          position: absolute;
+          background-color: #f9f9f9;
+          min-width: 160px;
+          box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+          z-index: 1;
+      }
+
+      .dropdown-content a {
+          float: none;
+          color: black;
+          padding: 12px 16px;
+          text-decoration: none;
+          display: block;
+          text-align: left;
+      }
+
+      .dropdown-content a:hover {
+          background-color: #ddd;
+      }
+
+      .show {
+          display: block;
+      }
+
+  </style>
 </head>
 
 <body>
+  <div class="navbar">
+      <div class="dropdown">
+          <button class="dropbtn" onclick="myFunction()">More Info
+    <i class="fa fa-caret-down"></i>
+  </button>
+          <div class="dropdown-content" id="myDropdown">
+              <a href="https://vivmokona.github.io/des157/proto2/index.html">Home</a>
+            <a href="https://fxtzhou.github.io/des157/projects/final/index.html">About</a>
+              <a class="active" href="#">Profile</a>
+              <a href="#contact">Contact</a>
+          </div>
+      </div>
+  </div>
   <section>
     <div class="profile">
     <img src="photos/tiffany.jpg" width="200px">
@@ -38,7 +116,23 @@
       </article>
 </section>
 
+<script>
+    /* When the user clicks on the button, toggle between hiding and showing the dropdown content */
+    function myFunction() {
+        document.getElementById("myDropdown").classList.toggle("show");
+    }
 
+    // Close the dropdown if the user clicks outside of it
+    window.onclick = function(e) {
+        if (!e.target.matches('.dropbtn')) {
+            var myDropdown = document.getElementById("myDropdown");
+            if (myDropdown.classList.contains('show')) {
+                myDropdown.classList.remove('show');
+            }
+        }
+    }
+
+</script>
 
   <footer>
     <a href="">About</a>
