--- a/projects/final/vivian.html
+++ b/projects/final/vivian.html
@@ -3,12 +3,13 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Isaac Tseng</title>
+  <title>Vivian Luu</title>
   <meta name="viewport" content="width=device-width , initial-scale= 1.0">
   <link href="https://cdn.jsdelivr.net/npm/normalize.css@7.0.0/normalize.min.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Roboto:400:700|Roboto+Condensed|Lobster" rel="stylesheet">
   <script defer src="https://use.fontawesome.com/releases/v5.0.7/js/all.js"></script>
   <link href='pagestyles.css' rel='stylesheet'>
+
   <style>
       .navbar {
           overflow: hidden;
@@ -75,10 +76,10 @@
       }
 
   </style>
+
 </head>
 
 <body>
-
   <div class="navbar">
       <div class="dropdown">
           <button class="dropbtn" onclick="myFunction()">More Info
@@ -95,49 +96,30 @@
 
   <section>
     <div class="profile">
-    <img src="photos/isaac.jpg" width="200px">
-    <h1>Isaac Tseng</h1>
-    <h2>Transportation Design</h2>
-    <h2>Pasadena, CA</h2>
-    <h2><a href="www.instagram.com/izzzzzaac"> <i class="fab fa-instagram"></i></a></h2>
+    <img src="photos/vivian.jpg" width="200px">
+    <h1>Vivian Luu</h1>
+    <h2>Graphic Design</h2>
+    <h2>95135</h2>
+    <h2><a href="www.vivluu.com"> Portfolio</a>
+    <h2><a href="www.instagram.com/vibrantventurer"> <i class="fab fa-instagram"></i></a></h2>
   </div>
 
   <article>
     <h3>What intrigued you to Design & why did you choose the field you are in now?</h3>
-    <p>Design inspires me in terms of its ability impact human lives. As designers we create things for our audiences' consumption from which they hopefully gain something to enrich their lives. My love for cars attracted me to the field initially. Looking
-      further into the field I realized how impactful transportation is to daily life, how it promotes mobility, which in turn can enhance productivity. It also heavily influences lifestyle and culture.</p>
+    <p>The ability to be creative while also getting the chance to solve problems in which I can help others! I chose this field because I didn't know what career path I wanted to pursue when I first began college. Eventually through some trial and error I found design to be a field that I really enjoyed and actually saw myself pursing for the rest of my life.</p>
 
     <h3>What have been your biggest struggles of your career?</h3>
-    <p>Learning to take criticism with a good, positive, and learning mindset. Critique can hurt, especially if someone says "I hate it" point blank to your face. No matter through school rejections, job fumbles, or class critique, maintaining an open mind
-      to learn something from whatever people have had to say about my work has been very beneficial towards my growth and tenacity as a designer.</p>
+    <p>I think the biggest struggle has been building up the skills to become a designer. School only taught me so much, and it has mostly been a learn-as-you go and when you're on the job type of thing. Another struggle that is up-and-coming is actually finding satisfaction in my job, I am wondering if I would ever change career paths because sometimes graphic design isn't as satisfying as I don't feel like I am creating a big impact through my graphics.</p>
 
     <h3>What have your experiences been like as a person of color in the design industry? Does those experiences shape how you solve design-related problems?</h3>
-    <p>Specifically in my field of design, I have yet to experience significant difference in treatment due to my skin color. I have surprised the occasional white American with my English given my international schooling background. In terms of opportunity
-      I haven't been denied any based on my race so far.</p>
+    <p>As a person of color I've been fortune enough to have others support me, but I have experienced racism and discrimination just being who I am. Such as under-selling myself and having others be skeptical of my skill sets. These experiences have taken me aback, but with this I learn to be more empathetic to those who have it tougher than me. It definitely has made me a more resilient human being and even shapes the way I think, act, and design.</p>
 
     <h3>How can design be more accommodating to underrepresented populations of people?</h3>
-    <p>Design works in systems, and societal systems are where underrepresentation can be found. In society there are systematic hierarchies that influence who gets more opportunity/representation and who gets less. Design can work to accommodate the underrepresented
-      through targeting systems. It could be through the apps we use, message campaigns, daily necessities, and more. Through systems we can influence people's habits and knowledge, working to create a more level platform for all people.</p>
-  </article>
+    <p>Design can be more accommodating by providing equitable opportunities. I am talking about job opportunities. Yes there may be equal opportunities, but people of different backgrounds may not have received the same level of education or funding to achieve a certain level of work. Employers should not just ignore someone for their lack of ability, instead employers should learn about one's background and see that they have a potential to grow as a way of decision-making. Any field of design should make an effort to include more people of different backgrounds for user-testing and when it comes to solving a design problem. Like factor in qualities like how they grew up, their class, ethnicity, any disabilities, age, gender, their struggles, etc, to have better inclusive design.</p>
+    </article>
 </section>
 
-<script>
-    /* When the user clicks on the button, toggle between hiding and showing the dropdown content */
-    function myFunction() {
-        document.getElementById("myDropdown").classList.toggle("show");
-    }
 
-    // Close the dropdown if the user clicks outside of it
-    window.onclick = function(e) {
-        if (!e.target.matches('.dropbtn')) {
-            var myDropdown = document.getElementById("myDropdown");
-            if (myDropdown.classList.contains('show')) {
-                myDropdown.classList.remove('show');
-            }
-        }
-    }
-
-</script>
 
   <footer>
     <a href="">About</a>
@@ -147,6 +129,29 @@
     <a href="https://jigsaw.w3.org/css-validator/check/referer">Valid CSS</a>
   </footer>
 
+
+
+  <script>
+      /* When the user clicks on the button, toggle between hiding and showing the dropdown content */
+      function myFunction() {
+          document.getElementById("myDropdown").classList.toggle("show");
+      }
+
+      // Close the dropdown if the user clicks outside of it
+      window.onclick = function(e) {
+          if (!e.target.matches('.dropbtn')) {
+              var myDropdown = document.getElementById("myDropdown");
+              if (myDropdown.classList.contains('show')) {
+                  myDropdown.classList.remove('show');
+              }
+          }
+      }
+
+  </script>
+
 </body>
+
+</html>
+
 
 </html>
