Edited links to Vivian's map

--- a/projects/final/index.html
+++ b/projects/final/index.html
@@ -19,8 +19,8 @@
 <body>
 	<img class="logo" src="images/logo.png" alt="logo" width="50">
 	<div class="arrow bounce">
-  <a class="fa fa-arrow-down fa-2x" href="#"></a>
-</div>
+		<a class="fa fa-arrow-down fa-2x" href="#"></a>
+	</div>
 
 	<div class="wrapper">
 		<div class="main">
@@ -32,34 +32,34 @@
 				<script src="script.js">
 				</script>
 				<!-- Pie Chart End-->
-<article>
-				<a href="https://designcensus.org/" style="margin-top: 25px;   text-decoration: none;  border: 1px #fff solid;">How?</a>
-				<a href="https://vivmokona.github.io/des157/proto2/index.html" style="margin-top: 25px;   text-decoration: none;  border: 1px #fff solid;">Let's Fix That</a>
-</article>
+				<article>
+					<a href="https://designcensus.org/" style="margin-top: 25px;   text-decoration: none;  border: 1px #fff solid;">How?</a>
+					<a href="https://vivmokona.github.io/des157/final/index.html" style="margin-top: 25px;   text-decoration: none;  border: 1px #fff solid;">Let's Fix That</a>
+				</article>
 			</section>
 
 			<section class="page" id="page2">
 				<h1>Yet people from all walks of life are <span>designing</span> and <span>changing</span>
        the world today.</h1>
-			 	<img src="images/1.png" alt="1" align="center" width="300">
-		</section>
+				<img src="images/1.png" alt="1" align="center" width="300">
+			</section>
 
 			<section class="page" id="page3">
 				<h1>There needs to be a <span>revisualization</span> to show there are more <span>Designers of Color</span> out here.</h1>
 				<section id="revealAnim">
 					<img class="side" src="images/2.gif" alt="2" align="center" width="280">
+				</section>
 			</section>
-		</section>
 
 			<section class="page" id="page4">
 				<h1>What can <span>you</span> do to help be a voice of <span>representation?</span> </h1>
-									<img src="images/3.png" alt="3" align="center" width="300">
+				<img src="images/3.png" alt="3" align="center" width="300">
 			</section>
 
 			<section class="page" id="page5">
 				<h1>We need <span>you</span> to help share your story!</h1>
-					<img src="images/4.png" alt="4" align="center">
-				</section>
+				<img src="images/4.png" alt="4" align="center">
+			</section>
 
 			<section class="page" id="page6">
 
@@ -73,10 +73,10 @@
 			<section class="page" id="page7">
 				<h3 style="float: left">You and your dot are special.<br><br>
 					 We'll use it to showcase your <span>work</span> and your <span>story</span>.</h3>
-					 								<img style=""src="images/6.png" alt="6" width="500">
+				<img style="" src="images/6.png" alt="6" width="500">
 				<article style="float: left; margin-left: 50px;">
 					<a href="interactiveprototype2.html" style="margin-top: 50px; margin-right: 25px;  text-decoration: none; border: 1px #fff solid;">Reset</a>
-					<a href="https://vivmokona.github.io/des157/proto2/index.html" style="margin-top: 50px; margin-right: 200px; text-decoration: none; border: 1px #fff solid;">Let's do it!</a>
+					<a href="https://vivmokona.github.io/des157/final/index.html" style="margin-top: 50px; margin-right: 200px; text-decoration: none; border: 1px #fff solid;">Let's do it!</a>
 				</article>
 			</section>
 
@@ -97,4 +97,5 @@
 		});
 	</script>
 </body>
+
 </html>
