--- a/projects/final/index.html
+++ b/projects/final/index.html
@@ -84,7 +84,7 @@
 	</div>
 	<footer>
 		<a href="">About</a>
-		<a href="">Contact</a>
+		<a href="https://vivmokona.github.io/des157/final/contact/index.html">Contact</a>
 		<a href="">Privacy Policy</a>
 		<a href="https://validator.w3.org/check?uri=referer">Valid HTML 5</a>
 		<a href="https://jigsaw.w3.org/css-validator/check/referer">Valid CSS</a>
