--- a/projects/final/index.html
+++ b/projects/final/index.html
@@ -74,8 +74,8 @@
 				<h3 style="float: left">You and your dot are special.<br><br>
 					 We'll use it to showcase your <span>work</span> and your <span>story</span>.</h3>
 				<img style="" src="images/6.png" alt="6" width="500">
-				<article style="float: left; margin-left: 50px;">
-					<a href="interactiveprototype2.html" style="margin-top: 50px; margin-right: 25px;  text-decoration: none; border: 1px #fff solid;">Reset</a>
+				<article style="float: left; margin-left: 50px; margin-top: -5%;">
+					<a href="index.html" style="margin-top: 50px; margin-right: 25px;  text-decoration: none; border: 1px #fff solid;">Reset</a>
 					<a href="https://vivmokona.github.io/des157/final/index.html" style="margin-top: 50px; margin-right: 200px; text-decoration: none; border: 1px #fff solid;">Let's do it!</a>
 				</article>
 			</section>
