--- a/projects/final/index.html
+++ b/projects/final/index.html
@@ -17,7 +17,7 @@
 </head>
 
 <body>
-	<img class="logo" src="images/logo.png" alt="logo" width="50">
+	<a href="index.html"><img style="position: fixed; left: 10px; margin-top: 5px;"src="images/logo.png" alt="logo" width="50"></a>
 	<div class="arrow bounce">
 		<a class="fa fa-arrow-down fa-2x" href="#"></a>
 	</div>
