--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
           <li><a href="projects/interactiveprototype1/interactiveprototype1.html">Interactive Prototype 1</a></li>
           <li><a href="projects/interactiveprototype2/interactiveprototype2.html">Interactive Prototype 2</a></li>
           <li><a href="projects/audience-test.html">Audience Test</a></li>
+          <li><a href="projects/final/welcome.html">Audience Landing Page</a></li>
           <li><a href="projects/final/index.html">Final</a></li>
 
         </ul>
