--- a/projects/audience-test.html
+++ b/projects/audience-test.html
@@ -6,7 +6,7 @@
   <link href="https://fonts.googleapis.com/css?family=Montserrat:100,400" rel="stylesheet">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.16/p5.js"></script>
   <meta charset="UTF-8">
-  <title>storyboards</title>
+  <title>audience test</title>
 </head>
 
 <body>
