--- a/projects/final/index.html
+++ b/projects/final/index.html
@@ -53,12 +53,12 @@
 
 			<section class="page" id="page4">
 				<h1>What can <span>you</span> do to help be a voice of <span>representation?</span> </h1>
-				<img src="images/3.png" alt="3" align="center" width="300">
+				<img class="grow" src="images/3.png" alt="3" align="center" width="300">
 			</section>
 
 			<section class="page" id="page5">
 				<h1>We need <span>you</span> to help share your story!</h1>
-				<img src="images/4.png" alt="4" align="center">
+				<img src="images/4.png" alt="4" align="center" width="300">
 			</section>
 
 			<section class="page" id="page6">
@@ -74,7 +74,7 @@
 				<h3 style="float: left">You and your dot are special.<br><br>
 					 We'll use it to showcase your <span>work</span> and your <span>story</span>.</h3>
 				<img style="" src="images/6.png" alt="6" width="500">
-				<article style="float: left; margin-left: 50px; margin-top: -5%;">
+				<article style="position: absolute; float: left;">
 					<a href="index.html" style="margin-top: 50px; margin-right: 25px;  text-decoration: none; border: 1px #fff solid;">Reset</a>
 					<a href="https://vivmokona.github.io/des157/final/index.html" style="margin-top: 50px; margin-right: 200px; text-decoration: none; border: 1px #fff solid;">Let's do it!</a>
 				</article>
