Welcome page open in new tab

--- a/projects/final/welcome.html
+++ b/projects/final/welcome.html
@@ -17,9 +17,9 @@
 </head>
 
 <body>
-<h1>Welcome!</h1>
-<button style="float:right; margin-right:200px;"><a href="https://fxtzhou.github.io/des157/final/index.html">Let's start!</a></button>
-<h2 style="width:50%; line-height: 125%">Thank you for taking the time to test our project. We have some tasks and questions for you
+	<h1>Welcome!</h1>
+	<button style="float:right; margin-right:200px;"><a href=“https://fxtzhou.github.io/des157/projects/final/index.html” target=“_blank”>Let's start!</a></button>
+	<h2 style="width:50%; line-height: 125%">Thank you for taking the time to test our project. We have some tasks and questions for you
 	to help us help better your experience!</h2>
 	<h3>Tasks</h3>
 	<ul style="line-height: 125%">
@@ -55,4 +55,5 @@
 	</footer>
 
 </body>
+
 </html>
