target blank final

--- a/projects/final/welcome.html
+++ b/projects/final/welcome.html
@@ -18,7 +18,7 @@
 
 <body>
 	<h1>Welcome!</h1>
-	<button style="float:right; margin-right:200px;"><a href=index.html target=“_blank”>Let's start!</a></button>
+	<button style="float:right; margin-right:200px;"><a href="index.html">Let's start!</a></button>
 	<h2 style="width:50%; line-height: 125%">Thank you for taking the time to test our project. We have some tasks and questions for you
 	to help us help better your experience!</h2>
 	<h3>Tasks</h3>
