Made changes to profile pages

--- a/projects/final/michelle.html
+++ b/projects/final/michelle.html
@@ -81,17 +81,17 @@
 
 <body>
   <div class="navbar">
-      <div class="dropdown">
-          <button class="dropbtn" onclick="myFunction()">More Info
+    <div class="dropdown">
+      <button class="dropbtn" onclick="myFunction()">More Info
     <i class="fa fa-caret-down"></i>
   </button>
-          <div class="dropdown-content" id="myDropdown">
-              <a href="https://vivmokona.github.io/des157/proto2/index.html">Home</a>
-              <a href="https://fxtzhou.github.io/des157/projects/final/index.html">About</a>
-              <a class="active" href="#">Profile</a>
-              <a href="#contact">Contact</a>
-          </div>
+      <div class="dropdown-content" id="myDropdown">
+        <a href="https://vivmokona.github.io/des157/final/index.html">Home</a>
+        <a href="https://fxtzhou.github.io/des157/projects/final/about.html">About</a>
+        <a class="active" href="https://vivmokona.github.io/des157/final/profile/form.html">Profile</a>
+        <a href="https://vivmokona.github.io/des157/final/contact/index.html">Contact</a>
       </div>
+    </div>
   </div>
 
   <section>
@@ -117,13 +117,13 @@
 
 
 
-  <footer>
-    <a href="">About</a>
-    <a href="">Contact</a>
-    <a href="">Privacy Policy</a>
-    <a href="https://validator.w3.org/check?uri=referer">Valid HTML 5</a>
-    <a href="https://jigsaw.w3.org/css-validator/check/referer">Valid CSS</a>
-  </footer>
+<footer>
+  <a href="https://fxtzhou.github.io/des157/projects/final/about.html">About</a>
+  <a href="https://vivmokona.github.io/des157/final/contact/index.html">Contact</a>
+  <a href="">Privacy Policy</a>
+  <a href="https://validator.w3.org/check?uri=referer">Valid HTML 5</a>
+  <a href="https://jigsaw.w3.org/css-validator/check/referer">Valid CSS</a>
+</footer>
 
 
 
