--- a/projects/final/isaac.html
+++ b/projects/final/isaac.html
@@ -85,9 +85,9 @@
   </button>
       <div class="dropdown-content" id="myDropdown">
         <a href="https://vivmokona.github.io/des157/final/index.html">Home</a>
-        <a href="https://fxtzhou.github.io/des157/projects/final/index.html">About</a>
-        <a class="active" href="#">Profile</a>
-        <a href="#contact">Contact</a>
+        <a href="https://fxtzhou.github.io/des157/projects/final/about.html">About</a>
+        <a class="active" href="https://vivmokona.github.io/des157/final/profile/form.html">Profile</a>
+        <a href="https://vivmokona.github.io/des157/final/contact/index.html">Contact</a>
       </div>
     </div>
   </div>
@@ -98,7 +98,9 @@
       <h1>Isaac Tseng</h1>
       <h2>Transportation Design</h2>
       <h2>Pasadena, CA</h2>
-      <h2><a href="https://www.instagram.com/izzzzzaac"> <i class="fab fa-instagram"></i></a></h2>
+      <h4><a style="padding: 8px;   border-radius: 50px;   transition: color 20s linear;
+        animation: colorshift 30s infinite;
+        transition-timing-function: ease-in;" href="https://www.instagram.com/izzzzzaac"> <i class="fab fa-instagram"></i></a></h4>
     </div>
 
     <article>
@@ -138,8 +140,8 @@
   </script>
 
   <footer>
-    <a href="">About</a>
-    <a href="">Contact</a>
+    <a href="https://fxtzhou.github.io/des157/projects/final/about.html">About</a>
+    <a href="https://vivmokona.github.io/des157/final/contact/index.html">Contact</a>
     <a href="">Privacy Policy</a>
     <a href="https://validator.w3.org/check?uri=referer">Valid HTML 5</a>
     <a href="https://jigsaw.w3.org/css-validator/check/referer">Valid CSS</a>
