--- a/projects/final/tiffany.html
+++ b/projects/final/tiffany.html
@@ -84,9 +84,9 @@
   </button>
       <div class="dropdown-content" id="myDropdown">
         <a href="https://vivmokona.github.io/des157/final/index.html">Home</a>
-        <a href="https://fxtzhou.github.io/des157/projects/final/index.html">About</a>
-        <a class="active" href="#">Profile</a>
-        <a href="#contact">Contact</a>
+        <a href="https://fxtzhou.github.io/des157/projects/final/about.html">About</a>
+        <a class="active" href="https://vivmokona.github.io/des157/final/profile/form.html">Profile</a>
+        <a href="https://vivmokona.github.io/des157/final/contact/index.html">Contact</a>
       </div>
     </div>
   </div>
@@ -96,9 +96,14 @@
       <h1>Tiffany Trieu</h1>
       <h2>Exhibition Design</h2>
       <h2>94107</h2>
-      <h2><a href="https://www.itstiffanytrieu.com">Portfolio</a></h2>
-      <h2><a href="https://instagram.com/itstiffanytrieu"> <i class="fab fa-instagram"></i></a></h2>
+      <h4><a style="padding: 8px;   border-radius: 50px;   transition: color 20s linear;
+        animation: colorshift 30s infinite;
+        transition-timing-function: ease-in;" href="https://www.itstiffanytrieu.com">Portfolio</a></h4>
+      <h4><a style="padding: 8px;   border-radius: 50px;   transition: color 20s linear;
+        animation: colorshift 30s infinite;
+        transition-timing-function: ease-in;" href="https://instagram.com/itstiffanytrieu"> <i class="fab fa-instagram"></i></a></h4>
     </div>
+  
 
     <article>
       <h3>What intrigued you to Design & why did you choose the field you are in now?</h3>
@@ -134,8 +139,8 @@
   </script>
 
   <footer>
-    <a href="">About</a>
-    <a href="">Contact</a>
+    <a href="https://fxtzhou.github.io/des157/projects/final/about.html">About</a>
+    <a href="https://vivmokona.github.io/des157/final/contact/index.html">Contact</a>
     <a href="">Privacy Policy</a>
     <a href="https://validator.w3.org/check?uri=referer">Valid HTML 5</a>
     <a href="https://jigsaw.w3.org/css-validator/check/referer">Valid CSS</a>
