Got rid of about.html and made AIGA website open in new tab

--- a/projects/final/index.html
+++ b/projects/final/index.html
@@ -30,7 +30,7 @@
 Make a statement by placing yourself on the map based on your location.<br>
 <span>You and your dot are special.</span>
 We will use it to showcase your work and story.</h3>
-<a href="https://designcensus.org/" style="margin-top: 25px; width: 1.5in; text-decoration: none;  border: 2px #fff solid;">Learn More at AIGA</a>
+<a href="https://designcensus.org/" target="_blank" style="margin-top: 25px; width: 1.5in; text-decoration: none;  border: 2px #fff solid;">Learn More at AIGA</a>
 	<a href="https://vivmokona.github.io/des157/final/index.html" style="margin-top: 25px; width: 1.5in; margin-left: 100px; text-decoration: none;  border: 2px #fff solid;">Go to Map</a>
 </section>
 
