--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
           <li><a href="projects/interactiveprototype1/index.html">Interactive Prototype 1</a></li>
           <li><a href="projects/interactiveprototype2/index.html">Interactive Prototype 2</a></li>
           <li><a href="projects/audience-test.html">Audience Test</a></li>
+            <li><a href="projects/audience-test-results.html">Audience Test Results</a></li>
           <li><a href="projects/final/index.html">Final</a></li>
 
         </ul>
