--- a/projects/final/linh.html
+++ b/projects/final/linh.html
@@ -10,135 +10,134 @@
   <script defer src="https://use.fontawesome.com/releases/v5.0.7/js/all.js"></script>
   <link href='pagestyles.css' rel='stylesheet'>
   <style>
-    .navbar {
-      overflow: hidden;
-      background-color: #333;
-      font-family: 'Roboto', Helvetica, sans-serif;
-    }
+      .navbar {
+          overflow: hidden;
+          background-color: #333;
+          font-family: 'Roboto', Helvetica, sans-serif;
+      }
 
-    .navbar a {
-      float: left;
-      font-size: 16px;
-      color: white;
-      text-align: center;
-      padding: 7px 16px;
-      text-decoration: none;
-    }
+      .navbar a {
+          float: left;
+          font-size: 16px;
+          color: white;
+          text-align: center;
+          padding: 7px 16px;
+          text-decoration: none;
+      }
 
-    .dropdown {
-      float: right;
-      overflow: hidden;
-    }
+      .dropdown {
+          float: right;
+          overflow: hidden;
+      }
 
-    .dropdown .dropbtn {
-      cursor: pointer;
-      font-size: 16px;
-      border: none;
-      outline: none;
-      color: white;
-      padding: 10px 12px;
-      background-color: inherit;
-      font-family: inherit;
-      margin: 0;
-    }
+      .dropdown .dropbtn {
+          cursor: pointer;
+          font-size: 16px;
+          border: none;
+          outline: none;
+          color: white;
+          padding: 10px 12px;
+          background-color: inherit;
+          font-family: inherit;
+          margin: 0;
+      }
 
-    .navbar a:hover,
-    .dropdown:hover .dropbtn,
-    .dropbtn:focus {
-      background-color: skyblue;
-    }
+      .navbar a:hover,
+      .dropdown:hover .dropbtn,
+      .dropbtn:focus {
+          background-color: skyblue;
+      }
 
-    .dropdown-content {
-      display: none;
-      position: absolute;
-      background-color: #f9f9f9;
-      min-width: 160px;
-      box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
-      z-index: 1;
-    }
+      .dropdown-content {
+          display: none;
+          position: absolute;
+          background-color: #f9f9f9;
+          min-width: 160px;
+          box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+          z-index: 1;
+      }
 
-    .dropdown-content a {
-      float: none;
-      color: black;
-      padding: 12px 16px;
-      text-decoration: none;
-      display: block;
-      text-align: left;
-    }
+      .dropdown-content a {
+          float: none;
+          color: black;
+          padding: 12px 16px;
+          text-decoration: none;
+          display: block;
+          text-align: left;
+      }
 
-    .dropdown-content a:hover {
-      background-color: #ddd;
-    }
+      .dropdown-content a:hover {
+          background-color: #ddd;
+      }
 
-    .show {
-      display: block;
-    }
+      .show {
+          display: block;
+      }
+
   </style>
 </head>
 
 <body>
   <div class="navbar">
-    <div class="dropdown">
-      <button class="dropbtn" onclick="myFunction()">More Info
+      <div class="dropdown">
+          <button class="dropbtn" onclick="myFunction()">More Info
     <i class="fa fa-caret-down"></i>
   </button>
-      <div class="dropdown-content" id="myDropdown">
-        <a href="https://vivmokona.github.io/des157/final/index.html">Home</a>
-        <a href="https://fxtzhou.github.io/des157/projects/final/about.html">About</a>
-        <a class="active" href="https://vivmokona.github.io/des157/final/profile/form.html">Profile</a>
-        <a href="https://vivmokona.github.io/des157/final/contact/index.html">Contact</a>
+          <div class="dropdown-content" id="myDropdown">
+              <a href="https://vivmokona.github.io/des157/proto2/index.html">Home</a>
+              <a href="https://fxtzhou.github.io/des157/projects/final/index.html">About</a>
+              <a class="active" href="#">Profile</a>
+              <a href="#contact">Contact</a>
+          </div>
       </div>
-    </div>
   </div>
   <section>
     <div class="profile">
-      <img src="photos/linh.jpg" width="200px">
-      <h1>Linh Quan</h1>
-      <h2>Graphic Design</h2>
-      <h2>91351</h2>
-      <h4><a style="padding: 8px;   border-radius: 50px;   transition: color 20s linear;
-        animation: colorshift 30s infinite;
-        transition-timing-function: ease-in;" href="https://linh-quan.com">Portfolio</a></h4>
-      <h4><a style="padding: 8px;   border-radius: 50px;   transition: color 20s linear;
-        animation: colorshift 30s infinite;
-        transition-timing-function: ease-in;" href="https://www.instagram.com/linh_creates"> <i class="fab fa-instagram"></i></a></h4>
-    </div>
+    <img src="photos/linh.jpg" width="200px">
+    <h1>Linh Quan</h1>
+    <h2>Graphic Design</h2>
+    <h2>91351</h2>
+          <h2><a href="linh-quan.com">Portfolio</a></h2>
+    <h2><a href="www.instagram.com/linh_creates"> <i class="fab fa-instagram"></i></a></h2>
 
-    <article>
-      <h3>What intrigued you to Design & why did you choose the field you are in now?</h3>
-      <p>I thought that designers had the ability to make the world around them more beautiful and i wanted to be apart of that world. I chose graphics because it felt like a happy medium between design and my love for drawing, painting, and illustration.</p>
+  </div>
 
-      <h3>What have been your biggest struggles of your career?</h3>
-      <p>The biggest struggle in my career is finding a full time job that won’t take advantage of me and under pay me.</p>
+  <article>
+    <h3>What intrigued you to Design & why did you choose the field you are in now?</h3>
+    <p>I thought that designers had the ability to make the world around them more beautiful and i wanted to be apart of that world. I chose graphics because it felt like a happy medium between design and my love for drawing, painting, and illustration.</p>
 
-      <h3>What have your experiences been like as a person of color in the design industry? Does those experiences shape how you solve design-related problems?</h3>
-      <p>I often find it hard to relate to many famous designers in history because they have been predominately white.</p>
+    <h3>What have been your biggest struggles of your career?</h3>
+    <p>The biggest struggle in my career is finding a full time job that won’t take advantage of me and under pay me.</p>
 
-      <h3>How can design be more accommodating to underrepresented populations of people?</h3>
-      <p>We can be more accommodating to underrepresented populations of people by having doscussions of their accomplishments and bringing more awareness to them.</p>
+    <h3>What have your experiences been like as a person of color in the design industry? Does those experiences shape how you solve design-related problems?</h3>
+    <p>I often find it hard to relate to many famous designers in history because they have been predominately white.</p>
+
+    <h3>How can design be more accommodating to underrepresented populations of people?</h3>
+    <p>We can be more accommodating to underrepresented populations of people by having doscussions of their accomplishments and bringing more awareness to them.</p>
     </article>
-  </section>
+</section>
 
-  <script>
+<script>
     /* When the user clicks on the button, toggle between hiding and showing the dropdown content */
     function myFunction() {
-      document.getElementById("myDropdown").classList.toggle("show");
+        document.getElementById("myDropdown").classList.toggle("show");
     }
 
     // Close the dropdown if the user clicks outside of it
     window.onclick = function(e) {
-      if (!e.target.matches('.dropbtn')) {
-        var myDropdown = document.getElementById("myDropdown");
-        if (myDropdown.classList.contains('show')) {
-          myDropdown.classList.remove('show');
+        if (!e.target.matches('.dropbtn')) {
+            var myDropdown = document.getElementById("myDropdown");
+            if (myDropdown.classList.contains('show')) {
+                myDropdown.classList.remove('show');
+            }
         }
-      }
     }
-  </script>
+
+</script>
 
   <footer>
-    <a href="https://fxtzhou.github.io/des157/projects/final/about.html">About</a>
-    <a href="https://vivmokona.github.io/des157/final/contact/index.html">Contact</a>
+    <a href="">About</a>
+    <a href="">Contact</a>
     <a href="">Privacy Policy</a>
     <a href="https://validator.w3.org/check?uri=referer">Valid HTML 5</a>
     <a href="https://jigsaw.w3.org/css-validator/check/referer">Valid CSS</a>
