Linked to presentation.pdf

--- a/index.html
+++ b/index.html
@@ -47,11 +47,12 @@
           <li><a href="projects/wireframe.html">Wireframe</a></li>
           <li><a href="projects/interactivewireframe/interactivewireframe.html">Interactive Wireframe</a></li>
           <li><a href="projects/comps.html">Comps</a></li>
-          <li><a href="projects/interactiveprototype1/index.html">Interactive Prototype 1</a></li>
-          <li><a href="projects/interactiveprototype2/index.html">Interactive Prototype 2</a></li>
+          <li><a href="projects/interactiveprototype1/interactiveprototype1.html">Interactive Prototype 1</a></li>
+          <li><a href="projects/interactiveprototype2/interactiveprototype2.html">Interactive Prototype 2</a></li>
           <li><a href="projects/audience-test.html">Audience Test</a></li>
-            <li><a href="projects/audience-test-results.html">Audience Test Results</a></li>
+          <li><a href="projects/final/welcome.html">Audience Landing Page</a></li>
           <li><a href="projects/final/index.html">Final</a></li>
+          <li><a href="projects/final/presentation.pdf">Presentation</a></li>
 
         </ul>
       </nav>
