--- a/projects/final/index.html
+++ b/projects/final/index.html
@@ -6,7 +6,7 @@
 	<title>great title here</title>
 	<meta name="viewport" content="width=device-width , initial-scale= 1.0">
 	<link href="https://cdn.jsdelivr.net/npm/normalize.css@7.0.0/normalize.min.css" rel="stylesheet">
-	<link href="https://fonts.googleapis.com/css?family=Roboto:400:700" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Roboto:400:700|Rock+Salt" rel="stylesheet">
 	<script defer src="https://use.fontawesome.com/releases/v5.0.7/js/all.js"></script>
 	<link rel="stylesheet" href="http://anijs.github.io/lib/anicollection/anicollection.css">
 	<script type="text/javascript" src="onepagescroll.js"></script>
@@ -17,74 +17,27 @@
 </head>
 
 <body>
-	<img class="logo" src="images/logo.png" alt="logo" width="50">
-	<div class="arrow bounce">
-  <a class="fa fa-arrow-down fa-2x" href="#"></a>
+	<a href="index.html"><img style="position: fixed; left: 20px; "src="images/logo.png" alt="logo" width="50"></a>
+
+<div id="container">
+	<section style="  border-right: 3px #fff solid; min-width: 50%;">
+		<h1>According to AIGA, 60% of Design is <span>White</span>.</h1>
+	</section>
+
+<section style="margin-left: 100px;">
+	<h3>People from all walks of life are designing change for the world today.<br>
+	We need <span>you</span> to share your story with us.
+Make a statement by placing yourself on the map based on your location.<br>
+<span>You and your dot are special.</span>
+We will use it to showcase your work and story.</h3>
+<a href="https://designcensus.org/" target="_blank" style="margin-top: 25px; width: 1.5in; text-decoration: none;  border: 2px #fff solid;">Learn More at AIGA</a>
+	<a href="https://vivmokona.github.io/des157/final/index.html" style="margin-top: 25px; width: 1.5in; margin-left: 100px; text-decoration: none;  border: 2px #fff solid;">Go to Map</a>
+</section>
+
 </div>
-
-	<div class="wrapper">
-		<div class="main">
-			<section class="page" id="page1">
-				<h1>According to AIGA, 60% of Design is <span>White</span>.</h1>
-
-				<!-- Pie Chart -->
-				<div id="chartContainer" style="height: 300px; max-width: 600px; margin: 0px auto;"></div>
-				<script src="script.js">
-				</script>
-				<!-- Pie Chart End-->
-<article>
-				<a href="https://designcensus.org/" style="margin-top: 25px;   text-decoration: none;  border: 1px #fff solid;">How?</a>
-				<a href="https://vivmokona.github.io/des157/proto2/index.html" style="margin-top: 25px;   text-decoration: none;  border: 1px #fff solid;">Let's Fix That</a>
-</article>
-			</section>
-
-			<section class="page" id="page2">
-				<h1>Yet people from all walks of life are <span>designing</span> and <span>changing</span>
-       the world today.</h1>
-			 	<img src="images/1.png" alt="1" align="center" width="300">
-		</section>
-
-			<section class="page" id="page3">
-				<h1>There needs to be a <span>revisualization</span> to show there are more <span>Designers of Color</span> out here.</h1>
-				<section id="revealAnim">
-					<img class="side" src="images/2.gif" alt="2" align="center" width="280">
-			</section>
-		</section>
-
-			<section class="page" id="page4">
-				<h1>What can <span>you</span> do to help be a voice of <span>representation?</span> </h1>
-									<img src="images/3.png" alt="3" align="center" width="300">
-			</section>
-
-			<section class="page" id="page5">
-				<h1>We need <span>you</span> to help share your story!</h1>
-					<img src="images/4.png" alt="4" align="center">
-				</section>
-
-			<section class="page" id="page6">
-
-				<h3 style="float: left;">Make a statement by placing yourself on the map based on your location.<br><br>
-       You will be a small dot, but <span>together</span> we can
-       collectively bring awareness.</h3>
-				<img src="images/5.png" alt="5" width="500">
-
-			</section>
-
-			<section class="page" id="page7">
-				<h3 style="float: left">You and your dot are special.<br><br>
-					 We'll use it to showcase your <span>work</span> and your <span>story</span>.</h3>
-					 								<img style=""src="images/6.png" alt="6" width="500">
-				<article style="float: left; margin-left: 50px;">
-					<a href="interactiveprototype2.html" style="margin-top: 50px; margin-right: 25px;  text-decoration: none; border: 1px #fff solid;">Reset</a>
-					<a href="https://vivmokona.github.io/des157/proto2/index.html" style="margin-top: 50px; margin-right: 200px; text-decoration: none; border: 1px #fff solid;">Let's do it!</a>
-				</article>
-			</section>
-
-		</div>
-	</div>
 	<footer>
 		<a href="">About</a>
-		<a href="">Contact</a>
+		<a href="https://vivmokona.github.io/des157/final/contact/index.html">Contact</a>
 		<a href="">Privacy Policy</a>
 		<a href="https://validator.w3.org/check?uri=referer">Valid HTML 5</a>
 		<a href="https://jigsaw.w3.org/css-validator/check/referer">Valid CSS</a>
@@ -97,4 +50,5 @@
 		});
 	</script>
 </body>
+
 </html>
