Hosted makerfaire link to portal page

--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
           <li><a href="projects/final/welcome.html">Audience Landing Page</a></li>
           <li><a href="projects/final/index.html">Final</a></li>
           <li><a href="projects/presentation.pdf">Presentation</a></li>
+          <li><a href="projects/doc-makerfaire/index.html">Makerfaire</a></li>
 
         </ul>
       </nav>
