--- a/projects/doc-makerfaire/vivian.html
+++ b/projects/doc-makerfaire/vivian.html
@@ -6,93 +6,42 @@
   <title>Vivian Luu</title>
   <meta name="viewport" content="width=device-width , initial-scale= 1.0">
   <link href="https://cdn.jsdelivr.net/npm/normalize.css@7.0.0/normalize.min.css" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Roboto:400:700|Roboto+Condensed|Lobster" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Roboto:400:700|Roboto+Condensed|Lobster|Rock+Salt" rel="stylesheet">
   <script defer src="https://use.fontawesome.com/releases/v5.0.7/js/all.js"></script>
   <link href='pagestyles.css' rel='stylesheet'>
 
-  <style>
-  /* Hamburger Nav */
-
-  .sidenav {
-      height: 100%;
-      width: 0;
-      position: fixed;
-      z-index: 1;
-      top: 0;
-      right: 0;
-      background-color: #111;
-      overflow-x: hidden;
-      transition: 0.5s;
-      padding-top: 60px;
-  }
-
-  .sidenav a {
-      padding: 8px 8px 8px 32px;
-      text-decoration: none;
-      font-size: 25px;
-      color: #818181;
-      display: block;
-      transition: 0.3s;
-  }
-
-  .sidenav a:hover {
-      color: #f1f1f1;
-  }
-
-  .sidenav .closebtn {
-      position: absolute;
-      top: 0;
-      right: 25px;
-      font-size: 36px;
-      margin-left: 50px;
-  }
-
-  #main {
-      position: absolute;
-      top: -15px;
-      right: 0;
-      transition: margin-left .5s;
-      padding: 16px;
-  }
-
-  /*Changes inside nav*/
-
-  @media screen and (max-height: 450px) {
-      .sidenav {
-          padding-top: 15px;
-      }
-      .sidenav a {
-          font-size: 18px;
-      }
-  }
-
-  </style>
-
 </head>
-
 <body>
+
+  <header>
+  	<a href="index.html">Designers of Color Map</a>
+
+
+
   <div id="mySidenav" class="sidenav">
 		<a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-		<a href="https://fxtzhou.github.io/des157/projects/final/index.html">Home</a>
+  <a href="../index.html">Home</a>
 		<a class="active" href="https://vivmokona.github.io/des157/final/index.html">Map</a>
-				<a href="https://vivmokona.github.io/des157/final/profile/form.html">Profile</a>
-		<a href="https://fxtzhou.github.io/des157/projects/final/index.html">About</a>
-		<a href="contact/index.html">Contact</a>
+				<a href="profile/form.html">Profile</a>
+		<a href="about/about.html">About</a>
+		<a href="contact/contact.html">Contact</a>
 	</div>
 
   <div id="main">
     <span style="font-size:30px;cursor:pointer" onclick="openNav()">&#9776;</span>
   </div>
+    </header>
 
   <section>
     <div class="profile">
-        <a style="text-align: left;"href="https://vivmokona.github.io/des157/final/index.html">Back</a><br>
-    <img src="photos/vivian.jpg" width="200px">
+    <div id="back"><a href="https://vivmokona.github.io/des157/final/index.html">Back</a></div>
+  <center>  <img src="photos/vivian.jpg" width="200px">
     <h1>Vivian Luu</h1>
     <h2>Graphic Design</h2>
     <h2>95135</h2>
     <h2><a href="www.vivluu.com"> Portfolio</a>
     <h2><a href="www.instagram.com/vibrantventurer"> <i class="fab fa-instagram"></i></a></h2>
+</center>
   </div>
 
   <article>
@@ -115,7 +64,6 @@
   <footer>
     <a href="https://fxtzhou.github.io/des157/projects/final/index.html">About</a>
     <a href="contact/index.html">Contact</a>
-    <a href="">Privacy Policy</a>
     <a href="https://validator.w3.org/check?uri=referer">Valid HTML 5</a>
     <a href="https://jigsaw.w3.org/css-validator/check/referer">Valid CSS</a>
   </footer>
